bridges/jac-bridge/tests/ui/impl_unknown_type.stderr
error: `impl Bar` — not defined in this bridge module
 --> tests/ui/impl_unknown_type.rs:8:10
  |
8 |     impl Bar {
  |          ^^^
